improvements in evolution

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 </head>
 <body>
     <canvas id="myCanvas"></canvas>
+
+    <div>
+        <p id='message'></p>
+        <button onclick="saveBrain()">save</button>
+    </div>
     <script src="network.js"></script>
     <script src="sensor.js"></script>
     <script src="utils.js"></script>
